# huffman_coding

./: .gitignore  Cargo.toml  sample_text.txt
src/: decode.rs  encode.rs  frequency_table.rs  huffman_tree.rs  lib.rs  main.rs
