[package]
name = "huffman_coding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { version = "1.0.1", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
rmp-serde = "1.1.2"
serde_derive = "1.0.196"
serde_json = "1.0.111"
savefile = "0.16.4"
savefile-derive = "0.16"
